--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,8 @@
         android:orientation="horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="30dp">
 
         <com.google.android.material.button.MaterialButton
             style="@style/Round.Button.Success"
@@ -65,6 +66,7 @@
         <com.google.android.material.button.MaterialButton
             style="@style/Round.Button.Primary"
             android:layout_width="0dp"
+            android:onClick="logout"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1"
