--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,10 +19,13 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:menu="@menu/main_menu">
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/ivUserPicture"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@drawable/ic_account_circle" />
+                android:src="@drawable/ic_account_circle"
+                app:civ_border_color="@color/colorBackground"
+                app:civ_border_width="1dp" />
 
         </com.google.android.material.appbar.MaterialToolbar>
 
