--- a/app/src/main/res/drawable/approval_menu_icon.xml
+++ b/app/src/main/res/drawable/approval_menu_icon.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:enterFadeDuration="@integer/config_navAnimTime" android:exitFadeDuration="@integer/config_navAnimTime">
-    <item android:drawable="@drawable/service_active" android:state_selected="true">
+    <item android:drawable="@drawable/ic_check_colored" android:state_selected="true">
         <transition android:opacity="transparent" />
     </item>
-    <item android:drawable="@drawable/service_normal" />
+    <item android:drawable="@drawable/ic_check_mark" />
 </selector>
