--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,11 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <style name="CapsText.PageBody" parent="CapsText">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
     <style name="BottomNavigation.TabLayout" parent="Widget.MaterialComponents.TabLayout.Colored">
         <item name="tabTextAppearance">@style/CapsText.BottomMenu</item>
         <item name="tabTextColor">@color/textInfo</item>
@@ -67,8 +72,18 @@
         <item name="fontFamily">sans-serif-medium</item>
     </style>
 
-    <style name="CapsText" parent="Widget.MaterialComponents.BottomNavigationView">
+    <style name="CapsText">
         <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="TabLayoutRoundedSuccessTabItem">
+        <item name="android:background">@drawable/grey_rounded</item>
+        <item name="tabBackground">@drawable/styled_tab_item</item>
+        <item name="tabIndicator">@null</item>
+        <item name="tabRippleColor">@null</item>
+        <item name="tabSelectedTextColor">@android:color/white</item>
+        <item name="tabTextColor">@android:color/black</item>
+        <item name="tabUnboundedRipple">false</item>
     </style>
 
     <style name="CapsText.BottomMenu" parent="CapsText">
