--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
                 android:text="@string/services" />
 
             <EditText
+                android:id="@+id/etSearch"
                 style="@style/RoundedGrey.EditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
