--- a/app/src/main/res/layout/approvals.xml
+++ b/app/src/main/res/layout/approvals.xml
@@ -8,22 +8,18 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/approvalTabLayout"
+        style="@style/TabLayoutRoundedSuccessTabItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/grey_rounded"
-        app:tabBackground="@drawable/styled_tab_item"
-        app:tabIndicator="@null"
-        app:tabRippleColor="@null"
-        app:tabSelectedTextColor="@android:color/white"
-        app:tabTextColor="@android:color/black"
-        app:tabUnboundedRipple="false" />
+        android:elevation="2dp" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp" />
 
 </LinearLayout>
