--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
         <com.google.android.material.button.MaterialButton
             style="@style/Round.Button.Primary"
             android:layout_width="0dp"
-            android:onClick="logout"
+            android:onClick="login"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1"
