--- a/app/src/main/res/layout/media_card.xml
+++ b/app/src/main/res/layout/media_card.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="100dp"
+        android:minHeight="80dp"
         android:padding="10dp">
 
         <TextView
@@ -52,7 +52,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tvSubtitle"
             app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
-            tools:text="The reason why present or not The reason why present or not The reason why present or not The reason why present or not The reason why present or not The reason why present or not" />
+            tools:text="The reason " />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
