provide mapbox lifecycle onstart, add ability to back home when showing second level menu

--- a/app/src/main/res/layout/leave_tracker.xml
+++ b/app/src/main/res/layout/leave_tracker.xml
@@ -25,6 +25,5 @@
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
